--- a/src/D2RLaunch/D2RLaunch/Views/ShellView.xaml
+++ b/src/D2RLaunch/D2RLaunch/Views/ShellView.xaml
@@ -32,6 +32,7 @@
             ExpandedModeThresholdWidth="600"
             ExpandedModeWidth="245"
             IndentationWidth="0"
+            DrawerBackground="Black"
             IsToggleButtonVisible="False">
 
             <syncfusion:SfNavigationDrawer.ToggleButtonContentTemplate>
