--- a/src/D2RLaunch/D2RLaunch/Views/Dialogs/CASCExtractor.xaml
+++ b/src/D2RLaunch/D2RLaunch/Views/Dialogs/CASCExtractor.xaml
@@ -183,6 +183,15 @@
                 Margin="0,5,5,5"
                 Style="{StaticResource LabelHeaderStyle}" />
         </StackPanel>
+        <syncfusion:ButtonAdv
+            Grid.Row="0"
+            Width="36"
+            Height="36"
+            HorizontalAlignment="Left"
+            cm:Message.Attach="[Event Click] = [Action OnCascHelp];"
+            Background="Transparent"
+            IconTemplate="{StaticResource QuestionMarkIconTemplate}"
+            Style="{StaticResource SfButtonAdvSmallStyle}" Margin="10,145,0,0" Grid.Column="2" Grid.RowSpan="2" />
 
     </Grid>
 </UserControl>
